welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:7: error: value nbBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value nbBiscuit'?
} nbBiscuit = nbBiscuit + 1
  ^