welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit:Int = 0
var nbPas:Int = 0
while(!estSurBiscuit) {
	avance();
	
} nbBiscuit = nbBiscuit + 1
